fix: Update mobile spacing and header in public page

--- a/src/app/record/pages/my-orcid/my-orcid.component.scss
+++ b/src/app/record/pages/my-orcid/my-orcid.component.scss
@@ -14,8 +14,12 @@
   padding-top: 16px !important;
 }
 
+.container.mobile {
+  padding-top: 28px !important;
+}
+
 h2 {
-  margin-top: 32px;
+  margin-top: 0;
   margin-bottom: 18px;
 }
 
@@ -28,12 +32,16 @@ app-main {
   max-width: 100%;
 }
 
+app-top-bar.mobile {
+  margin-bottom: 32px;
+}
+
 app-side-bar {
-  padding-bottom: 40px !important;
+  margin-bottom: 40px !important;
 }
 
 app-side-bar.mobile {
-  padding-bottom: 16px !important;
+  margin-bottom: 32px !important;
 }
 
 app-statistics {
